<resources>
    <string name="app_name">doanLTDD_1</string>
    <string name="vocalbulary">Vocalbulary</string>
    <string name="grammar">Grammar</string>
    <string name="exercise">Exercise</string>
    <string name="exercise1">Exercise</string>
    <string name="back">Back</string>
    <string name="time_00_00">Time: 00:00</string>
    <string name="question_here">Question here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="score_0">Score: 0</string>
    <string name="time_30_sec">Time: 30 sec</string>
    <string name="point">Điểm: 0</string>
    <string name="correctNumber">Số câu đúng: 0</string>
    <string name="back_home">Back Home</string>
    <string name="unit_name">Unit Name</string>
    <string name="do_grammar_exercises">Do Grammar Exercises</string>
    <string name="textview">TextView</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="grammar_title">Grammar Title</string>
    <string name="how_to_use">Usage: How to use grammar here</string>
    <string name="grammar_description">Grammar Description</string>
    <string name="unit">Unit 1</string>
    <string name="title_card">hoạt động</string>
    <string name="tro_tu">n</string>
    <string name="phien_am">/ækˈtɪv.ə.ti/</string>
    <string name="play_audio">Play Audio</string>
    <string name="meaning_in_vietnamese">Meaning in Vietnamese</string>
    <string name="prev">Prev</string>
</resources>