<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewCorrectAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctNumber"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <ListView
        android:id="@+id/listViewResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <Button
        android:id="@+id/buttonBackToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_home" />
</LinearLayout>
