<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/grammarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grammar_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/grammarUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:textSize="14sp"
            android:textColor="#000000"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/grammarContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grammar_description"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="4dp" />



    </LinearLayout>
</androidx.cardview.widget.CardView>
